--- a/cscad_basicTopic4.html
+++ b/cscad_basicTopic4.html
@@ -38,37 +38,42 @@
 
         <section id="lectures" class="mt-4">
 		
-<h3>Тема №4. Проектування комп`ютерних систем на рівні топології кристалу</h3>	
-<b><h3 class="fs-5">Основні аспекти проектування та формати представлення результатів моделювання та проектування.</h3></b>
-Потік проектування VLSI рівня топології кристалу. Стилі дизайну VLSI рівня топології кристалу. Формування списку з’єднань(NetList) на основі RTL-моделі. Планування частин кристалу(Floorplanning). Розміщення компонентів(Placement). Трасування з’єднань(Routing). Формування масок(Layout Generation). Масштабування елементів топології та характеристик режиму функціонування кристалу. Netlist-, EDIF-, DEF-, LIB-, DB-, LEF-, TF-, TLU-, IO-, SDC-, SDF-, VCD-, SPEF-, SPF-, GDS-, GDSII- та OASIS-формати даних процесу проектування. Використання мов TLC, Perl та Python для формування сценаріїв автоматизації процесу проектування. Використання SPICE/PSPICE для моделювання.
+<h3>Тема №4. Проектування комп`ютерних систем на рівні топології кристалу</h3>
+<br>	
+<b><h3 class="fs-5">Основні аспекти проектування та формати представлення результатів моделювання та проектування</h3></b>
+Потік проектування VLSI рівня топології кристалу. Стилі дизайну VLSI рівня топології кристалу. Формування списку з’єднань (NetList) на основі RTL-моделі. Планування частин кристалу (Floorplanning). Розміщення компонентів (Placement). Трасування з’єднань (Routing). Формування масок (Layout Generation). Масштабування елементів топології та характеристик режиму функціонування кристалу. Netlist-, EDIF-, DEF-, LIB-, DB-, LEF-, TF-, TLU-, IO-, SDC-, SDF-, VCD-, SPEF-, SPF-, GDS-, GDSII- та OASIS-формати даних процесу проектування. Використання мов TLC, Perl та Python для формування сценаріїв автоматизації процесу проектування. Використання SPICE/PSPICE для моделювання.
 <br>
-<b><h3 class="fs-5">Базові засоби автоматизованого проектування на рівні топології кристалу.</h3></b>
-Застосування засобу Genus Synthesis Solution(Cadence) та засобу Design Compiler(Synopsys) для синтезу на основі RTL-опису проекту. Застосування засобу Virtuoso Schematic Editor(Cadence) для внесення змін у проект. Застосування засобу Innovus Implementation System(Cadence) та IC Compiler II(Synopsys) для розміщення компонентів кристалу та трасування. Застосування засобу Virtuoso Layout Suite(Cadence) для роботи з макетом кристалу. Інші засоби.
 <br>
-<b><h3 class="fs-5">Верифікація проекту(англ. Signoff).</h3></b>
-<b><i>Функціональна верифікація проекту.</i></b> Задача функціональної верифікації. Застосування засобів Incisive Enterprise Verifier(Cadence) та Xcelium Logic Simulator(Cadence). Застосування засобу SpyGlass(Synopsys). Інші засоби.
+<b><h3 class="fs-5">Базові засоби автоматизованого проектування на рівні топології кристалу</h3></b>
+Застосування засобу Genus Synthesis Solution (Cadence) та засобу Design Compiler (Synopsys) для синтезу на основі RTL-опису проекту. Застосування засобу Virtuoso Schematic Editor (Cadence) для внесення змін у проект. Застосування засобу Innovus Implementation System (Cadence) та IC Compiler II (Synopsys) для розміщення компонентів кристалу та трасування. Застосування засобу Virtuoso Layout Suite (Cadence) для роботи з макетом кристалу. Інші засоби.
 <br>
-<b><i>Верифікація аналогової частини проекту.</i></b> Застосування засобів Virtuoso ADE Product Suite(Cadence) та Spectre Simulation Platform(Cadence) для верифікації аналогової частини проекту.
 <br>
-<b><i>Модифікація проекту для тестоздатності(DFT Insertion).</i></b> Концепція DFT<i>(англ. Design For Testability)</i>. Концепція ATPG<i>(англ. Automatic Test Pattern Generation)</i>. Засоби TetraMax/TestMax(Cadence). Універсальна методика верифікації<i>(англ. Universal Verification Methodology, UVM)</i>.
+<b><h3 class="fs-5">Верифікація проекту (англ. Signoff)</h3></b>
+<b><i>Функціональна верифікація проекту.</i></b> Задача функціональної верифікації. Застосування засобів Incisive Enterprise Verifier (Cadence) та Xcelium Logic Simulator (Cadence). Застосування засобу SpyGlass (Synopsys). Інші засоби.
 <br>
-<b><i>Формальна верифікація.</i></b> Задача формальної верифікації. Засіб Conformal Equivalence Checker(Cadence). Інші засоби.
+<b><i>Верифікація аналогової частини проекту.</i></b> Застосування засобів Virtuoso ADE Product Suite (Cadence) та Spectre Simulation Platform (Cadence) для верифікації аналогової частини проекту.
 <br>
-<b><i>Статичний часовий аналіз.</i></b> Форми статичного часового аналізу. Засіб Tempus Timing Signoff Solution(Cadence). Засіб Primetime-SI(Synopsys) для відстеження цілісності сигналів<i>(англ. Signal Integrity)</i>.
+<b><i>Модифікація проекту для тестоздатності (DFT Insertion).</i></b> Концепція DFT <i>(англ. Design For Testability)</i>. Концепція ATPG <i>(англ. Automatic Test Pattern Generation) </i>. Засоби TetraMax/TestMax (Cadence). Універсальна методика верифікації <i>(англ. Universal Verification Methodology, UVM)</i>.
 <br>
-<b><i>Верифікація живлення.</i></b> Аналіз спаду напруги<i>(англ. IR-Drop)</i> на ланках проекту. Засіб Voltus IC Power Integrity Solution(Cadence). Засіб PrimePower(Synopsys).
+<b><i>Формальна верифікація.</i></b> Задача формальної верифікації. Засіб Conformal Equivalence Checker (Cadence). Інші засоби.
 <br>
-<b><i>Фізична верифікація.</i></b> Огляд концепцій фізичної верифікації. Перевірка правил проектування<i>(англ. Design Rule Checking)</i> та засіб Calibre nmDRC(Siemens, Mentor Graphics). Відповідність макету схемі<i>(англ. Layout Versus Schematic)</i> та засіб Calibre nmLVS(Siemens, Mentor Graphics).
+<b><i>Статичний часовий аналіз.</i></b> Форми статичного часового аналізу. Засіб Tempus Timing Signoff Solution (Cadence). Засіб Primetime-SI (Synopsys) для відстеження цілісності сигналів <i>(англ. Signal Integrity)</i>.
 <br>
-<b><h3 class="fs-5">Екстракція негативних побічних ефектів(англ. Parasitic Extraction) та їх усунення.</h3></b>
-<b><i>Екстракція негативних побічні ефектів та їх усунення.</i></b> Формування схеми<i>(англ. Circuit Extraction)</i> з топологічної моделі. Екстракція негативних побічних ефектів<i>(англ. Parasitic Extraction)</i>. Усунення негативних побічних ефектів.
+<b><i>Верифікація живлення.</i></b> Аналіз спаду напруги <i>(англ. IR-Drop)</i> на ланках проекту. Засіб Voltus IC Power Integrity Solution (Cadence). Засіб PrimePower (Synopsys).
 <br>
-<b><i>Засоби екстракції негативних побічних ефектів.</i></b> Засіб Quantus Extraction Solution(Cadence). Інші засоби екстракції негативних побічних ефектів.
+<b><i>Фізична верифікація.</i></b> Огляд концепцій фізичної верифікації. Перевірка правил проектування <i>(англ. Design Rule Checking)</i> та засіб Calibre nmDRC (Siemens, Mentor Graphics). Відповідність макету схемі <i>(англ. Layout Versus Schematic)</i> та засіб Calibre nmLVS (Siemens, Mentor Graphics).
 <br>
-<b><h3 class="fs-5">Проектування для процесу виробництва(англ. Design for Manufacturing).</h3></b>
-<b><i>Процес виробництва та виробничо залежні ефекти.</i></b> Огляд процесу виробництва. Вплив ефектів процесу травлення<i>(англ. Effects of Etching Process)</i>. Хіміко-механічна планерезація<i>(англ. Chemical Mechanical Planarization)</i>. Особливості процесу літографії<i>(англ. Lithography)</i>. Вплив варіації ширини металу<i>(англ. Metal Width Variation)</i> та варіації товщини металу<i>(англ. Metal Thickness Variation)</i>. Огляд інших виробничо залежних ефектів.
 <br>
-<b><i>Засоби усунення виробничозалежних ефектів.</i></b> Засіб Calibre YieldEnhancer(Siemens, Mentor Graphics). Засіб Calibre YieldAnalyzer(Siemens, Mentor Graphics). Засіб Calibre CMPAnalyzer (Siemens, Mentor Graphics). Засіб Calibre LFD(Siemens, Mentor Graphics).
+<b><h3 class="fs-5">Екстракція негативних побічних ефектів (англ. Parasitic Extraction) та їх усунення</h3></b>
+<b><i>Екстракція негативних побічні ефектів та їх усунення.</i></b> Формування схеми <i>(англ. Circuit Extraction)</i> з топологічної моделі. Екстракція негативних побічних ефектів <i>(англ. Parasitic Extraction)</i>. Усунення негативних побічних ефектів.
+<br>
+<b><i>Засоби екстракції негативних побічних ефектів.</i></b> Засіб Quantus Extraction Solution (Cadence). Інші засоби екстракції негативних побічних ефектів.
+<br>
+<br>
+<b><h3 class="fs-5">Проектування для процесу виробництва (англ. Design for Manufacturing)</h3></b>
+<b><i>Процес виробництва та виробничо залежні ефекти.</i></b> Огляд процесу виробництва. Вплив ефектів процесу травлення <i>(англ. Effects of Etching Process)</i>. Хіміко-механічна планерезація <i>(англ. Chemical Mechanical Planarization) </i>. Особливості процесу літографії <i>(англ. Lithography)</i>. Вплив варіації ширини металу <i>(англ. Metal Width Variation)</i> та варіації товщини металу <i>(англ. Metal Thickness Variation)</i>. Огляд інших виробничо залежних ефектів.
+<br>
+<b><i>Засоби усунення виробничозалежних ефектів.</i></b> Засіб Calibre YieldEnhancer (Siemens, Mentor Graphics). Засіб Calibre YieldAnalyzer (Siemens, Mentor Graphics). Засіб Calibre CMPAnalyzer (Siemens, Mentor Graphics). Засіб Calibre LFD (Siemens, Mentor Graphics).
 			
 
 			
