--- a/acm.html
+++ b/acm.html
@@ -667,6 +667,106 @@
 					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw26_2/master/acmhw26_2.kt', 'acmhw26_2.kt'); return false;">Зразок коду одним файлом* (скачати)</a></b>		
                                         </div>
                                     </div>
+                                </div>	
+                            </div>		
+                        </div>
+                    </div>
+                </div>
+				
+                <div class="accordion-item">
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#hw27Collapse"><!-- aria-expanded="true" aria-controls="hw16Collapse">-->Лекційне домашнє завдання №27</button></h2>
+                    <div id="hw27Collapse" class="accordion-collapse collapse" data-bs-parent="#lecHomeworksAccordion">
+                        <div class="accordion-body">	
+                            <div class="accordion" id="hw27Accordion">       
+								<div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#hw27t1">Лекційне домашнє завдання №27.1</button>
+                                    </h2>
+                                    <div id="hw27t1" class="accordion-collapse collapse" data-bs-parent="#hw27Accordion">
+                                        <div class="accordion-body">	
+                                           Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/hw/acm2025HW27_1.pdf">Завдання (відкрити на GitHub)</a>
+						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/hw/acm2025HW27_1.pdf">Завдання (скачати)</a></b>
+						                            | <a href="https://github.com/KozakNazar/srcacmhw17_1/blob/master/index.js">Зразок коду одним файлом* (відкрити на GitHub)</a>
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw17_1/master/index.js', 'index.js'); return false;">Зразок коду одним файлом* (скачати)</a></b>		
+                                        </div>
+                                    </div>
+                                </div>		
+								<div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#hw27t2">Лекційне домашнє завдання №27.2</button>
+                                    </h2>
+                                    <div id="hw27t2" class="accordion-collapse collapse" data-bs-parent="#hw27Accordion">
+                                        <div class="accordion-body">	
+                                           Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/hw/acm2025HW27_2.pdf">Завдання (відкрити на GitHub)</a>
+						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/hw/acm2025HW27_2.pdf">Завдання (скачати)</a></b>
+						                            | <a href="https://github.com/KozakNazar/srcacmhw27_2/blob/master/main.py">Зразок коду одним файлом* (відкрити на GitHub)</a>
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw27_2/master/main.py', 'main.py'); return false;">Зразок коду одним файлом*(скачати)</a></b>		
+                                        </div>
+                                    </div>
+                                </div>	
+								<div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#hw27t3">Лекційне домашнє завдання №27.3</button>
+                                    </h2>
+                                    <div id="hw27t3" class="accordion-collapse collapse" data-bs-parent="#hw27Accordion">
+                                        <div class="accordion-body">	
+                                           Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/hw/acm2025HW27_3.pdf">Завдання (відкрити на GitHub)</a>
+						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/hw/acm2025HW27_3.pdf">Завдання (скачати)</a></b>
+						                            | <a href="https://github.com/KozakNazar/srcacmlab6/blob/master/srcacmhw27_3">Зразок коду одним файлом* (відкрити теку з файлм на GitHub)</a>
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab6/master/srcacmhw27_3/main.cpp', 'main.cpp'); return false;">Зразок коду одним файлом*(скачати)</a></b>		
+                                        </div>
+                                    </div>
+                                </div>								
+                            </div>		
+                        </div>
+                    </div>
+                </div>				
+								
+                <div class="accordion-item">
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#hw28Collapse"><!-- aria-expanded="true" aria-controls="hw16Collapse">-->Лекційне домашнє завдання №28</button></h2>
+                    <div id="hw28Collapse" class="accordion-collapse collapse" data-bs-parent="#lecHomeworksAccordion">
+                        <div class="accordion-body">	
+                            <div class="accordion" id="hw28Accordion">       
+								<div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#hw28t1">Лекційне домашнє завдання №28.1</button>
+                                    </h2>
+                                    <div id="hw28t1" class="accordion-collapse collapse" data-bs-parent="#hw28Accordion">
+                                        <div class="accordion-body">	
+                                           Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/hw/acm2025HW28_1.pdf">Завдання (відкрити на GitHub)</a>
+						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/hw/acm2025HW28_1.pdf">Завдання (скачати)</a></b>
+						                            | <a href="https://github.com/KozakNazar/srcacmhw28_1/blob/master/index.js">Зразок коду одним файлом* (відкрити на GitHub)</a>
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw28_1/master/index.js', 'index.js'); return false;">Зразок коду одним файлом* (скачати)</a></b>		
+                                        </div>
+                                    </div>
+                                </div>										
+								<div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#hw28t2">Лекційне домашнє завдання №28.2</button>
+                                    </h2>
+                                    <div id="hw28t2" class="accordion-collapse collapse" data-bs-parent="#hw28Accordion">
+                                        <div class="accordion-body">	
+                                           Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/hw/acm2025HW28_2.pdf">Завдання (відкрити на GitHub)</a>
+						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/hw/acm2025HW28_2.pdf">Завдання (скачати)</a></b>
+						                            | <a href="https://github.com/KozakNazar/srcacmhw28_2">Зразок коду (відкрити на GitHub теку з файлами)</a>
+					   | <b><a href="https://github.com/KozakNazar/srcacmhw28_2/archive/refs/heads/master.zip">Зразок коду (скачати архів з файлами)</a></b>		
+                                        </div>
+                                    </div>
+                                </div>																
+								<div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#hw28t3">Лекційне домашнє завдання №28.3</button>
+                                    </h2>
+                                    <div id="hw28t3" class="accordion-collapse collapse" data-bs-parent="#hw28Accordion">
+                                        <div class="accordion-body">	
+                                           Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/hw/acm2025HW28_3.pdf">Завдання (відкрити на GitHub)</a>
+						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/hw/acm2025HW28_3.pdf">Завдання (скачати)</a></b>
+						                            | <a href="https://github.com/KozakNazar/srcacmhw28_3__poll/blob/master/acmhw28_3__poll.c">Зразок коду одним файлом*, що застосовує системний виклику poll (відкрити на GitHub)</a>
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw28_3__poll/master/acmhw28_3__poll.c', 'acmhw28_3__poll.c'); return false;">Зразок коду одним файлом*, що застосовує системний виклику poll (скачати)</a></b>	
+						                            | <a href="https://github.com/KozakNazar/srcacmhw28_3__select/blob/master/acmhw28_select.c">Зразок коду одним файлом*, що застосовує системний виклику select (відкрити на GitHub)</a>
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw28_select/master/acmhw28_select.c', 'acmhw28_select.c'); return false;">Зразок коду одним файлом*, що застосовує системний виклику select (скачати)</a></b>						   
+                                        </div>
+                                    </div>
                                 </div>								
                             </div>		
                         </div>
