--- a/acm.html
+++ b/acm.html
@@ -589,7 +589,7 @@
                                         <div class="accordion-body">	
                                            Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/hw/acm2025HW24_2.pdf">Завдання(відкрити на GitHub)</a>
 						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/hw/acm2025HW24_2.pdf">Завдання(скачати)</a></b>
-						                            | <a href="https://github.com/KozakNazar/srcacmhw24_2">Зразок коду одним файлом*(відкрити на GitHub)</a>
+						                            | <a href="https://github.com/KozakNazar/srcacmhw24_2">Зразок коду одним (відкрити на GitHub теку з файлами)</a>
 					   | <b><a href="https://github.com/KozakNazar/srcacmhw24_1/archive/refs/heads/master.zip">Зразок коду (скачати архів з файлами)</a></b>		
                                         </div>
                                     </div>
@@ -686,8 +686,8 @@
                                         <div class="accordion-body">	
                                            Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/hw/acm2025HW27_1.pdf">Завдання (відкрити на GitHub)</a>
 						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/hw/acm2025HW27_1.pdf">Завдання (скачати)</a></b>
-						                            | <a href="https://github.com/KozakNazar/srcacmhw17_1/blob/master/index.js">Зразок коду одним файлом* (відкрити на GitHub)</a>
-					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw17_1/master/index.js', 'index.js'); return false;">Зразок коду одним файлом* (скачати)</a></b>		
+						                            | <a href="https://github.com/KozakNazar/srcacmhw27_1/blob/master/index.js">Зразок коду одним файлом* (відкрити на GitHub)</a>
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw27_1/master/index.js', 'index.js'); return false;">Зразок коду одним файлом* (скачати)</a></b>		
                                         </div>
                                     </div>
                                 </div>		
@@ -712,7 +712,7 @@
                                         <div class="accordion-body">	
                                            Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/hw/acm2025HW27_3.pdf">Завдання (відкрити на GitHub)</a>
 						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/hw/acm2025HW27_3.pdf">Завдання (скачати)</a></b>
-						                            | <a href="https://github.com/KozakNazar/srcacmlab6/blob/master/srcacmhw27_3">Зразок коду одним файлом* (відкрити теку з файлм на GitHub)</a>
+						                            | <a href="https://github.com/KozakNazar/srcacmlab6/blob/master/srcacmhw27_3">Зразок коду одним файлом* (відкрити теку з файлом на GitHub)</a>
 					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab6/master/srcacmhw27_3/main.cpp', 'main.cpp'); return false;">Зразок коду одним файлом*(скачати)</a></b>		
                                         </div>
                                     </div>
@@ -764,7 +764,7 @@
 						                            | <a href="https://github.com/KozakNazar/srcacmhw28_3__poll/blob/master/acmhw28_3__poll.c">Зразок коду одним файлом*, що застосовує системний виклику poll (відкрити на GitHub)</a>
 					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw28_3__poll/master/acmhw28_3__poll.c', 'acmhw28_3__poll.c'); return false;">Зразок коду одним файлом*, що застосовує системний виклику poll (скачати)</a></b>	
 						                            | <a href="https://github.com/KozakNazar/srcacmhw28_3__select/blob/master/acmhw28_select.c">Зразок коду одним файлом*, що застосовує системний виклику select (відкрити на GitHub)</a>
-					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw28_select/master/acmhw28_select.c', 'acmhw28_select.c'); return false;">Зразок коду одним файлом*, що застосовує системний виклику select (скачати)</a></b>						   
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw28_select/master/acmhw28_3__select.c', 'acmhw28_select.c'); return false;">Зразок коду одним файлом*, що застосовує системний виклику select (скачати)</a></b>						   
                                         </div>
                                     </div>
                                 </div>								
