--- a/acm.html
+++ b/acm.html
@@ -777,7 +777,7 @@
                     <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#hw_">...</button></h2>
                     <div id="hw_" class="accordion-collapse collapse" data-bs-parent="#lecHomeworksAccordion">
                         <div class="accordion-body">	
-                                           <i>Інші завдання додаватимуться в процесі вивчення дисципліни</i>		
+                                           <i>Інші завдання додаватимуться в процесі вивчення дисципліни.</i>		
                         </div>
                     </div>
                 </div>				
@@ -813,7 +813,7 @@
                     <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lecTask_">...</button></h2>
                     <div id="lecTask_" class="accordion-collapse collapse" data-bs-parent="#lecHomeworksAccordion">
                         <div class="accordion-body">	
-                                           <i>Завдання додаватимуться в процесі вивчення дисципліни</i>		
+                                           <i>Завдання додаватимуться в процесі вивчення дисципліни.</i>		
                         </div>
                     </div>
                 </div>
@@ -822,7 +822,8 @@
 
         <section id="lectures" class="mt-4">
             <h2>Лекції</h2>
-
+			<i>Конспекти тем та інші лекційні матеріали додаватимуться в процесі вивчення дисципліни.</i>
+			<p>
 			
 			
             <div class="accordion" id="courseMaterials">
