--- a/acm.html
+++ b/acm.html
@@ -773,14 +773,14 @@
                     </div>
                 </div>
 				
-                <div class="accordion-item">
+<!--                 <div class="accordion-item">
                     <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#hw_">...</button></h2>
                     <div id="hw_" class="accordion-collapse collapse" data-bs-parent="#lecHomeworksAccordion">
                         <div class="accordion-body">	
                                            <i>Інші завдання додаватимуться в процесі вивчення дисципліни.</i>		
                         </div>
                     </div>
-                </div>				
+                </div>	 -->			
             </div>
         </section>
 		
