--- a/acm.html
+++ b/acm.html
@@ -763,8 +763,8 @@
 						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/hw/acm2025HW28_3.pdf">Завдання (скачати)</a></b>
 						                            | <a href="https://github.com/KozakNazar/srcacmhw28_3__poll/blob/master/acmhw28_3__poll.c">Зразок коду одним файлом*, що застосовує системний виклику poll (відкрити на GitHub)</a>
 					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw28_3__poll/master/acmhw28_3__poll.c', 'acmhw28_3__poll.c'); return false;">Зразок коду одним файлом*, що застосовує системний виклику poll (скачати)</a></b>	
-						                            | <a href="https://github.com/KozakNazar/srcacmhw28_3__select/blob/master/acmhw28_select.c">Зразок коду одним файлом*, що застосовує системний виклику select (відкрити на GitHub)</a>
-					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw28_select/master/acmhw28_3__select.c', 'acmhw28_select.c'); return false;">Зразок коду одним файлом*, що застосовує системний виклику select (скачати)</a></b>						   
+						                            | <a href="https://github.com/KozakNazar/srcacmhw28_3__select/blob/master/acmhw28_3_select.c">Зразок коду одним файлом*, що застосовує системний виклику select (відкрити на GitHub)</a>
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw28_select/master/acmhw28_3__select.c', 'acmhw28_3_select.c'); return false;">Зразок коду одним файлом*, що застосовує системний виклику select (скачати)</a></b>						   
                                         </div>
                                     </div>
                                 </div>								
