--- a/acm.html
+++ b/acm.html
@@ -1083,6 +1083,29 @@
 
 			
         </section>
+        <section id="other" class="mt-4">
+            <h2>Інше</h2>
+            <div class="accordion" id="otherAccordion">
+                <div class="accordion-item">
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#mathematicalNotations">Довідник математичних позначень</button></h2>
+                    <div id="mathematicalNotations" class="accordion-collapse collapse" data-bs-parent="#otherAccordion">
+                        <div class="accordion-body">
+                            Матеріали: <a href="#">Таблиця математичних символів</a>					  
+                        </div>
+                    </div>
+                </div>
+<!--                 <div class="accordion-item">
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lecTask2">Лекційне контрольне завдання №2</button></h2>
+                    <div id="lecTask2" class="accordion-collapse collapse" data-bs-parent="#otherAccordion">
+                        <div class="accordion-body">
+                        Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/ct/ct/acm2025ExampleForCT2.pdf">Приклад виконання(відкрити на GitHub)</a>
+						      | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/ct/ct/acm2025ExampleForCT2.pdf">Приклад виконання(скачати)</a></b>
+						      | <b>Відомості стосовно завдання розглядаються безпосередньо на лекції, а виконання завдання здійснюється у письмовій формі наприкінці лекції</b>							  
+                        </div>
+                    </div>
+                </div> -->
+            </div>
+        </section>
 		
 		<br/>
 		
