--- a/acm.html
+++ b/acm.html
@@ -64,6 +64,10 @@
                 <button class="accordion-button" style="background-color: #cce5ff; color: #003366;" type="button" onclick="goBack()"><h3 class="fs-5">Назад</h3></button>
             </h2>
         </section>
+		
+        <section id="update_state">
+            <h5>Увага! Курс перебуває в стані оновлення, частина матеріалів поки відсутня. Матеріали будуть добавлятися у процесі вивчення дисципліни студентами КІ другого курсу 2025/2026 н.р..</h5>
+        </section>
 
         <section id="general" class="mt-4">
             <h2>Загальне</h2>
