--- a/cscad.html
+++ b/cscad.html
@@ -36,7 +36,7 @@
         </section>
 	
         <section id="update_state">
-            <h2>Увага! Курс перебуває в стані оновлення, більшість матеріалів поки відсутні.</h2>
+            <h2>Увага! Курс перебуває в стані оновлення, матеріали курсу поки відсутні.</h2>
         </section>
 
         <section id="lectures" class="mt-4">
