--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="col-lg-3 service">
           <i class="fa fa-star"></i>
           <p>АМО<br/><small>TBP</small></p>
-          <p class="text">Алгоритми та методи обчислень</p>
+          <p class="text">Алгоритми та моделі обчислень</p>
         </div>
         <div class="col-lg-3 service">
           <i class="fa fa-lock"></i>
