--- a/acm_annotationAndRecommendedReading.html
+++ b/acm_annotationAndRecommendedReading.html
@@ -56,9 +56,9 @@
 <p class=MsoNormal style='text-indent:1.0cm;line-height:normal'><span lang=UK
 style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
 UK'>Курс «Алгоритми та моделі обчислень» розроблений на основі класичних
-літературних джерел [1, 2, 3, 4, 5, 6, 7, 8] зважаючи на програми аналогічних
-курсів Массачусетського технологічного інституту [9, 10]. Основу дисципліни
-становлять наступні розділи.</span></p>
+літературних джерел [1–8] зважаючи на програми аналогічних курсів
+Массачусетського технологічного інституту [9, 10]. Основу дисципліни становлять
+наступні розділи.</span></p>
 
 <p class=MsoNormal style='margin-left:1.0cm;text-indent:1.0cm;line-height:normal'><span
 lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
