--- a/acm_basicTopic2.html
+++ b/acm_basicTopic2.html
@@ -253,8 +253,8 @@ mso-ansi-language:UK'>2.1.2.1 Визначення просторової скл
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>2.1.2.2 Детермінований(DSPACE) та
-недетермінований(NSPACE) просторові(ємнісні) ресурси</span></p>
+mso-ansi-language:UK'>2.1.2.2 Детермінований (DSPACE) та недетермінований (NSPACE)
+просторові (ємнісні) ресурси</span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
