--- a/acm_basicTopic1.html
+++ b/acm_basicTopic1.html
@@ -59,7 +59,7 @@ UK'>1.1 Неформальне тлумачення алгоритму </span></
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>1.1.1 Історія поняття алгоритму</span></p>
+mso-ansi-language:UK'>1.1.1 Історія тлумачення алгоритму</span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
@@ -96,14 +96,8 @@ style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>1.1.9 Імовірнісні алгоритми <i>(</i></span><i><span
-lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:EN-US'>увипадковлені</span></i><i><span lang=EN-US
-style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
-UK'> </span></i><i><span lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:EN-US'>алгоритми</span></i><i><span lang=UK
-style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
-UK'>)</span></i><span lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
+mso-ansi-language:UK'>1.1.9 Імовірнісні алгоритми <i>(увипадковлені алгоритми)</i></span><span
+lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
 margin-left:1.7pt;margin-bottom:.0001pt;line-height:normal;layout-grid-mode:
@@ -113,8 +107,8 @@ lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
 char'><i><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>(продовження в частині курсу, яка присвячена моделям обчислень(тема
-№6))</span></i></p>
+mso-ansi-language:UK'>(продовження в частині курсу, яка присвячена моделям
+обчислень(тема №6))</span></i></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
@@ -171,8 +165,8 @@ mso-ansi-language:UK'>1.3.4.8 Мінімізація скінченого дет
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>1.2.5 Перетворювачі <i>(трансдуктори)</i> на основі детермінованого
-скінченного автомату</span></p>
+mso-ansi-language:UK'>1.2.5 Перетворювачі <i>(трансдуктори)</i> на основі
+детермінованого скінченного автомату</span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
