--- a/acm_basicTopic6.html
+++ b/acm_basicTopic6.html
@@ -201,27 +201,17 @@ style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>6.2.</span><span lang=EN-US style='font-size:14.0pt;
-font-family:"Times New Roman",serif;mso-ansi-language:EN-US'>4</span><span
-lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'> </span><span lang=UK style='font-size:14.0pt;font-family:
-"Times New Roman",serif;mso-ansi-language:UK'>Нумерації та універсальність <i
-style='mso-bidi-font-style:normal'>(G&ouml;del Numbering, Enumeration,
-Universality)</i></span><span lang=EN-US style='mso-ansi-language:EN-US'><o:p></o:p></span></p>
+mso-ansi-language:UK'>6.2.4 Нумерації та універсальність <i style='mso-bidi-font-style:
+normal'>(G&ouml;del Numbering, Enumeration, Universality)</i></span><span
+lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>6.2.</span><span lang=EN-US style='font-size:14.0pt;
-font-family:"Times New Roman",serif;mso-ansi-language:EN-US'>4</span><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
-UK'>.1 Нумерації алгоритмів<o:p></o:p></span></p>
+mso-ansi-language:UK'>6.2.4.1 Нумерації алгоритмів<o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>6.2.4.</span><span lang=EN-US style='font-size:14.0pt;
-font-family:"Times New Roman",serif;mso-ansi-language:EN-US'>2</span><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
-UK'> Нумерація Геделя<o:p></o:p></span></p>
+mso-ansi-language:UK'>6.2.4.2 Нумерація Геделя<o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
@@ -250,8 +240,7 @@ mso-ansi-language:EN-US'>n</span></sub></i></b><b><i><sup><span lang=EN-US
 style='font-family:"Arial",sans-serif;color:#202122;background:white;
 mso-ansi-language:EN-US'>m</span></sup></i></b><span style='font-size:14.0pt;
 font-family:"Times New Roman",serif'>-</span><span lang=UK style='font-size:
-14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:UK'>теорема</span><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'> </span><i
+14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:UK'>теорема </span><i
 style='mso-bidi-font-style:normal'><span style='font-size:14.0pt;font-family:
 "Times New Roman",serif'>(</span></i><span class=SpellE><i style='mso-bidi-font-style:
 normal'><span lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif;
@@ -259,9 +248,9 @@ mso-ansi-language:EN-US'>Smn</span></i></span><i style='mso-bidi-font-style:
 normal'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
 mso-ansi-language:UK'>-теорема</span></i><i style='mso-bidi-font-style:normal'><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif'>)</span></i><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
-UK'> та теорема Кліні про нерухому точку </span><span lang=UK style='mso-ansi-language:
-UK'><o:p></o:p></span></p>
+style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
+UK'> <span lang=UK>та теорема Кліні про нерухому точку </span></span><span
+lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
@@ -336,16 +325,14 @@ lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>6.2.5.</span><span lang=EN-US style='font-size:14.0pt;
-font-family:"Times New Roman",serif;mso-ansi-language:EN-US'>6</span><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
-UK'> Зведення Тюрінга <i>(</i></span><i><span lang=EN-US style='font-size:14.0pt;
-font-family:"Times New Roman",serif;mso-ansi-language:EN-US'>Turing</span></i><i><span
+mso-ansi-language:UK'>6.2.5.6 Зведення Тюрінга <i>(</i></span><i><span
 lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'> </span></i><i><span lang=EN-US style='font-size:14.0pt;
-font-family:"Times New Roman",serif;mso-ansi-language:EN-US'>reduction</span></i><i><span
-lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
-UK'>)</span></i><span lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
+mso-ansi-language:EN-US'>Turing</span></i><i><span lang=EN-US style='font-size:
+14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:UK'> </span></i><i><span
+lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif;
+mso-ansi-language:EN-US'>reduction</span></i><i><span lang=UK style='font-size:
+14.0pt;font-family:"Times New Roman",serif;mso-ansi-language:UK'>)</span></i><span
+lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:1.7pt;line-height:normal;layout-grid-mode:
 char'><b><i><span lang=UK style='font-size:16.0pt;font-family:"Times New Roman",serif;
@@ -380,12 +367,14 @@ lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>6.3.6 Функтори в теорії категорій</span></p>
+mso-ansi-language:UK'>6.3.6 Функтори в теорії категорій</span><span lang=UK
+style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
 mso-ansi-language:UK'>6.3.7 Натуральні перетворення <i style='mso-bidi-font-style:
-normal'>(Natural transformations)</i></span></p>
+normal'>(Natural transformations)</i></span><span lang=UK style='mso-ansi-language:
+UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
@@ -439,21 +428,21 @@ UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>6.4.4 Семантична відмінність: опис як «як зробити» проти
-«що зробити»</span><span lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
+mso-ansi-language:UK'>6.4.4 Семантична відмінність: опис «як зробити» проти «що
+зробити»</span><span lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
-mso-ansi-language:UK'>6.4.5 Сучасні тренди у парадигмах програмування: реактивне
-програмування <i style='mso-bidi-font-style:normal'>(Reactive programming)</i>,
-потокове програмування <i style='mso-bidi-font-style:normal'>(Stream
+mso-ansi-language:UK'>6.4.5 Сучасні тренди у парадигмах програмування:
+реактивне програмування <i style='mso-bidi-font-style:normal'>(Reactive
+programming)</i>, потокове програмування <i style='mso-bidi-font-style:normal'>(Stream
 processing)</i>, асинхронне та подійно-орієнтоване програмування</span><span
 lang=UK style='mso-ansi-language:UK'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='line-height:normal;layout-grid-mode:char'><b><i><span
 lang=UK style='font-size:16.0pt;font-family:"Times New Roman",serif;mso-ansi-language:
-UK'>6.5 Функційні моделі обчислень та парадигма функційного програмування. Комбінаторна
-логіка.</span></i></b></p>
+UK'>6.5 Функційні моделі обчислень та парадигма функційного програмування.
+Комбінаторна логіка.</span></i></b></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif;
